--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-cpp/
+tests/cpp/
+tests/tests.js
+tests/as3/
+tests/php/
+tests/java/
+tests/csharp.cs/
+tests/tests.n
+tests/index.html
+tests/tests.py
+tests/tests.swf
